<resources>
    <string name="app_name">070 Shake lyrics</string>
    <string name="info_title">Who is the artist?</string>
    <string name="second_activity"></string>
    <string name="info_content">070 shake is an artist from new jersey usa.</string>

    <string name="lyrics_error"> Oops the someting went wrong :/ \n Go back and try again</string>
    <string name="title_one">Guilty Conscience</string>
    <string name="title_two">Morrow</string>
    <string name="title_three">Glitter</string>


    <string name="lyrics_one"> My mind won\'t let me\n
    Voice in my head\n
    I hear what it said\n
    I can\'t trust a thing\n
    If I picked up and left\n
    How fast did you forget?\n
    Resting while I\'m inside your presence\n
    I don\'t want to think nothing bad\n
    This time I won\'t\n
    This time I won\'t\n
    Five AM when I walked in\n
    Could not believe what I saw, yeah\n
    You on another one\'s body\n
    Ghosts of the past came to haunt me\n
    I caught you but you never caught me\n
    I was sitting here waitin\' on karma\n
    There goes my guilty conscience\n
    There goes my guilty conscience\n
    Five AM when I walked in\n
    Could not believe what I saw, yeah\n
    You on another one\'s body\n
    Ghosts of the past came to haunt me\n
    I caught you but you never caught me\n
    I was sitting here waitin\' on karma\n
    There goes my guilty conscience\n
    There goes my guilty conscience\n
    No, I won\'t let you stay\n
    Thanks for the hours\n
    Thanks for the days\n
    If I see your eyes\n
    I turn to stone\n
    I look away\n
    I gotta go\n
    Gone for the week, don\'t bother\n
    \'Til pigs fly, shit, keep on calling\n
    I\'ve been working for me, not sorry\n
    Next time that we speak, I\'ll be calm\n
    Next time that I go in, I\'m all in\n
    Why you so close but you feel so far?\n
    You look like the moon in the morning\n
    Jaded, faded, almost gone\n
    Resting while I\'m inside your presence\n
    I don\'t wanna think nothing bad\n
    Goodnights are never really good nights, nights, nights\n
    Feel something that\'s heavy inside\n
    Five AM when I walked in\n
    Could not believe what I saw, yeah\n
    You on another one\'s body\n
    Ghosts of the past came to haunt me\n
    I caught you but you never caught me\n
    I was sitting here waitin\' on karma\n
    There goes my guilty conscience\n
    There goes my guilty conscience\n
    Five AM when I walked in\n
    Could not believe what I saw, yeah\n
    You on another one\'s body\n
    Ghosts of the past came to haunt me\n
    I caught you but you never caught me\n
    I was sitting here waitin\' on karma\n
    There goes my guilty conscience\n
    There goes my guilty conscience</string>

    <string name="lyrics_two">An early \'mornin\n
    No clouds up in the sky\n
    She\'s paranoid\n
    But still she don\'t know why, yeah\n
    But still she don\'t know why, yeah\n
    This fire, yeah\n
    I know it burns inside\n
    It\'s your decision\n
    But still you make it mine, ayy\n
    It makes it easier for ya, ayy\n
    I know it\'s hard to swallow\n
    I don\'t know if I\'ll be here tomorrow (yeah)\n
    \'Morrow (yeah, yeah), Tomorrow (yeah)\n
    \'Morrow (yeah, yeah), Tomorrow\n
    Ah, did you not get the message?\n
    Said I\'m done callin\' and textin\'\n
    Don\'t be so passive-aggressive\n
    You\'re gonna pass that aggression\n
    We in business, I\'ve been invested\n
    I did not come to impress ya\n
    You\'re gonna know \'cause it\'s destined\n
    You feel it in your intestine (yeah)\n
    I know it\'s hard to swallow\n
    I don\'t know if I\'ll be here tomorrow (yeah)\n
    \'Morrow (yeah, yeah), tomorrow (yeah)\n
    \'Morrow (yeah, yeah), tomorrow\n
    You can\'t scream louder (no, no, no)\n
    No one\'s around you (no, no, no)\n
    Heart filled with malice (oh, oh, oh)\n
    And that\'s how you\'ll have it (oh, oh, oh)\n
    I\'m still so proud of you (no, no)\n
    Don\'t turn your back on me (oh, no)\n
    We\'ll find our balance (yeah, yeah, yeah)\n
    I, only I can control, need to find, to decide\n
    Why I\'m alive, in the burn and the glow\n
    \'Til I learn how to flow with the highs and the lows\n
    (With the highs and the lows) Comes and goes\n
    (Yeah go) ay\n
    I know it\'s hard to swallow\n
    I don\'t know if I\'ll be here tomorrow (yeah)\n
    \'Morrow (yeah, yeah), Tomorrow (yeah)\n
    \'Morrow (yeah, yeah), Tomorrow\n
    I\'m fuckin\' around\n
    Oh yeah\n
    I\'m fuckin\' around\n
    Oh yeah\n
    Yeah</string>

    <string name="lyrics_three">Sebastian\n\nIf this lasts longer than the song or the nightclub, I don\'t know\n
    It wasn\'t made for you to swim or you to want to get deep, you\'re only shallow\n
    Very careless I have been, this sweater ninety-six\n
    Ask before my tour, before I even exist, before I even exist\n
    Before I even existed, yeah, before I even existed\n\n
    Did I want to get rich, did I want to live?\n
    Did I want to bring what I got to the block\n
    To the block like this, like this, like this?\n
    Did I even exist, did I want to live?\n
    Did I want to bring what I got to the block\n
    To the block like this?\n\n
    And the people that I met make it bigger\n
    And I can promise you I\'m doin\' better\n
    And I can\'t leave you much, just this glitter\n
    And I can\'t leave you much, just this glitter, just this glitter\n
    All over your body (this glitter)\n
    All around your body (this glitter)\n
    All around your body (this glitter)\n
    All around your body (this glitter)\n
    All around your body (this glitter)\n
    All around your body (this glitter)\n
    All around your body (this glitter)\n
    All around your body\n\n
    All the sudden this, all day\n
    That\'s twenty-four hours outside of the gym\n
    It\'s been nineteen tears to nineteen years\n
    And now is that you wanna question\n
    How, when, where, and who I have been\n
    This time I don\'t be losin\' my head\n
    Truth is I don\'t wanna lie again\n
    Truth is I wanna find myself again\n
    Tell me my friend, my friend\n
    When I did lose it? My friend\n
    Tell me my friend, my friend, my friend\n
    When I did lose it, lose it again?\n
    I\'ve been drinkin\' lots to forget about the news\n
    I know when I sober up I\'ll have to pay my dues\n
    My friend, my dearest friend\n
    When did I lose it? Ah\n\n
    Did I want to get rich, did I want to live?\n
    Did I want to bring what I got to the block\n
    To the block like this, like this, like this?\n
    Did I even exist, did I want to live?\n
    Did I want to bring what I got to the block\n
    To the block like this?\n\n
    And the people that I met make it bigger\n
    And I can promise you I\'m doin\' better\n
    And I can\'t leave you much, just this glitter\n
    And I can\'t leave you much, just this glitter, just this glitter\n
    All over your body (this glitter)\n
    All around your body (this glitter)\n
    All around your body (this glitter)\n
    All around your body (this glitter)\n
    All around your body (this glitter)\n
    All around your body (this glitter)\n
    All around your body (this glitter)\n
    All around your body\n\n
    All over, all over your body, all over your body\n
    All over your body, your body\n
    All over your body, your body\n
    My friend-end-end-end, end-end-end, end, end-end-end\n
    Friend-end-end-end, friend-end-end, friend, end-end-end\n
    Friend-end-end-end, end-end-end, end, end-end-end\n
    Friend-end-end-end, friend-end-end, friend, end-end-end, end</string>
    <string name="menu_item_edit">Edit</string>
    <string name="info_btn">Info</string>
    <string name="date_btn">Date</string>
    <string name="heading_concert">Pick a date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>